data/derived/comb/progs/unify/prog7202.ml.out
Characters 54-55:
  wwhile (f, 3);;
          ^
Error: This expression has type int -> int * bool
       but an expression was expected of type bool -> bool
       Type int is not compatible with type bool 
